home.css
.slide {
    /* position: relative; */
    padding: 0px 15vw;
    /* height: 100vh; */
    overflow: hidden;
}

.home {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 100vh;
}
.text_wrapper{
    animation: slide-right 1.5s normal;
}

@keyframes slide-right {
    from {
      margin-left: -200vw;
    }
  
    to {
      margin-left: 0vw;
    }
  }
.hi {
    width: fit-content;
    font-size: 4vw;
    font-weight: 600;

}

.title {
    color: rgb(255, 255, 255);
    font-weight: bold;
    font-size: 2vw;
}

.nav div {
    margin: 15px 0px;
    font-weight: bold;
    transition: transform .2s linear;
    font-size: 3vw;
}

.nav div:hover {
    transform: scale(1.1);
}

.nav div i {
    color: white;
}

.nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    animation: slide-left 1.5s normal;
}
@keyframes slide-left {
    from {
      margin-right: -200vw;
    }
  
    to {
      margin-right: 0vw;
    }
}


@media screen and (max-width: 600px) {
    .slide{
        padding: 0px 8vw;
    }
    .hi {
        font-size: 12vw;
    }

    .title {
        font-size: 6vw;
    }

    .home {
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        height: var(--mobile-vh);
    }

    .nav div {
        font-size: 8vw;
    }
}

